--- a/Saucier720-app/src/app/recipes/FEC/recipe-nav-bar/recipe-nav-bar.component.scss
+++ b/Saucier720-app/src/app/recipes/FEC/recipe-nav-bar/recipe-nav-bar.component.scss
@@ -12,7 +12,6 @@ body {
   background-color: var(--secondary-color);
   padding: 5px;
   border-radius: 10px;
-  width: inherit;
 }
 
 .left-buttons,
